fixes algolia modal z-index

--- a/doc/_static/css/custom-theme.css
+++ b/doc/_static/css/custom-theme.css
@@ -152,7 +152,7 @@ pre > :not(:first-child).ipynb-lexed * {
     .first-column {
         position: sticky !important;
         top: 3.5rem;
-        z-index: 1000;
+        z-index: 100;
         height: calc(100vh - 3.5rem);
         display: block !important;
     }
@@ -167,7 +167,7 @@ pre > :not(:first-child).ipynb-lexed * {
         left: 0;
         width: 100%;
         height: 100%;
-        z-index: 99;
+        z-index: 100;
         background-color: #fff;
     }
 }
@@ -583,4 +583,11 @@ span.highlighted {
     padding-right: 2px;
     margin-top: 6px !important;
     margin-bottom: 6px !important;
+}
+
+
+/* adjust top bar so it doesn't overlay algolia's search modal */
+
+.fixed-top {
+    z-index: 150 !important;
 }
